@@ -1,9 +1,13 @@
 4.1.2
+- Change: Do not display an empty array, when there are no
+  attributes in the XML analysis.
 - Bugfix: Add additional error handling to the file service
   to get by with high traffic sites (Please, never debug a
   productive site. At least make sure that the logger can
   only get triggered by the dev.).
 - Bugfix: Applied sorting to the list of getter methods.
+- Bugfix: Make better use of the recursion detection for
+  the XML analysis.
 
 4.1.1
 - Change: Code cleanup.
